# boston-housing-mlops

./: Makefile  README.md  data.dvc  pyproject.toml
Boston/: __init__.py  dataset.py  features.py  plots.py
Boston/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
