[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Boston"
version = "0.0.1"
description = "Regression on Boston Housing using MLOPS"
authors = [
  { name = "Arya Gupta" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["Boston"]
include = ["pyproject.toml", "Boston/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Boston"]
force-sort-within-sections = true

